Check the process has the dynamic-codesigning entitlement before trying to allocate a holding JIT region https://bugs.webkit.org/show_bug.cgi?id=235673 rdar://88094997

Patch by Gavin Phillips <gavin.p@apple.com> on 2022-01-27
Reviewed by Saam Barati.

We only need to allocate a holding JIT region, for processes with the JIT disabled, if that process has the
dynamic-codesigning entitlement. We can skip this allocation if the process doesn't have that entitlement.

* jit/ExecutableAllocator.cpp:
(JSC::ExecutableAllocator::setJITEnabled):


Canonical link: https://commits.webkit.org/246483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288677 268f45cc-cd09-0410-ab3c-d52691b4dbfc