Source/JavaScriptCore/jit/ExecutableAllocator.cpp
@@ -140,7 +140,7 @@ void ExecutableAllocator::setJITEnabled(bool enabled)
     g_jscConfig.jitDisabled = !enabled;
 
 #if HAVE(IOS_JIT_RESTRICTIONS)
-    if (!enabled) {
+    if (!enabled && processHasEntitlement("dynamic-codesigning")) {
         // Because of an OS quirk, even after the JIT region has been unmapped,
         // the OS thinks that region is reserved, and as such, can cause Gigacage
         // allocation to fail. We work around this by initializing the Gigacage
